kubernetes/db-service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: projects-kiii
spec:
  serviceName: "mongodb"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: mongodb-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: projects-kiii
spec:
  ports:
    - port: 27017
      name: mongodb
      protocol: TCP
  selector:
    app: mongodb
