kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes-service
  namespace: recipes-kiii
spec:
  selector:
    app: recipes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
