kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes-ingress
  namespace: recipes-kiii
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipes-service
            port:
              number: 80
  - host: recipeskiii.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipes-service
            port:
              number: 80
